2007-01-18  Jean-Christophe Baillie  <baillie@gostai.com>

	update externals. 

2007-01-18  Jean-Christophe Baillie  <baillie@gostai.com>

	Doing a simple obj.x=7; command was triggering UNotifyAccess on x. In
	the more general case of controlled assignment, like "obj.x=7
	time:1s", this call to UVariable::get is necessary to know where to
	start from. In the case of a simple instantaneous assignment, the call
	must be avoided for optimization purposes.

	fix a bug in assignment triggering a non necessary call to UVariable::get() 
	* src/ucommand.cc: set controlled and use it in processModifiers as
	well.
	* src/ucommand.hh: moves 'controlled' from local to the call to object
	attribute (to be seen by all subsequent method calls).

2007-01-18  Jean-Christophe Baillie  <baillie@gostai.com>

	UOwned UVar which are UNotifyAccess'd and UNotifyChange'd in the same
	UObject should not trigger a loop of calls to UNotifyAccess.

	fix loop UNotifyChange/Access on UOwned UVar inside the same UObject 
	* src/userver.cc: use special call to get for the
	notify_access_and_change loop.
	* src/uvariable.cc: add support for autoloop in get.
	* src/uvariable.hh: add new prototype of get.

2007-01-17  Akim Demaille  <akim.demaille@free.fr>

	Check printf-like functions
	* src/ucommand.cc, src/ucommand.hh, src/ucommandqueue.cc,
	* src/uconnection.cc, src/uexpression.cc, src/userver.hh:
	Use GCC's features to check them.

2007-01-17  Jean-Christophe Baillie  <baillie@gostai.com>

	There was several flaw in the way UNotifyChange was working on
	USensor-tagged UVar. Also, the interaction between UNotifyChange and
	UNotifyAccess was not working properly in remote mode (you could have
	a UNotifyChange remote and a UNotifyAccess plugged without any effect,
	while this should loop the Access).

	I have fixed these problems and will clarify the rationale behind 
	USensor in a wiki page. By the way, USensor will be renamed in the
	next commit (*with backward compatibility of course*).
