@@ -265,10 +265,10 @@ namespace urbi
 	vardata->variable->delta = (double) v;
 	break;
       case PROP_BLEND:
-	if (v.type == UValue::DATA_DOUBLE)
+	if (v.type == DATA_DOUBLE)
 	  //numeric val
 	  vardata->variable->blendType = (UBlendType) (int) (double) v;
-	else if (v.type == UValue::DATA_STRING)
+	else if (v.type == DATA_STRING)
 	  vardata->variable->blendType = ublendtype (std::string(v).c_str ());
     }
   }
